# log-analysis-council

./: KULLANIM_KILAVUZU.md  README.md  ornek_council_runner.py  ornek_log_extractor.py  pyproject.toml  start.sh
backend/: academic_kb.py  config.py  council.py  ingest.py  log_cache.py  log_parser.py  main.py  openrouter.py  personas.py  storage.py  validator.py  vector_db.py  vehicle_profile.py  web_search.py
backend/knowledge_base/: actuator_failures.md  flight_log_analysis.md  flight_reporting.md  flight_review.md  plotjuggler_log_analysis.md  sensor_ekf_anomalies.md  similar_vtol_references.md  vibration_troubleshooting.md  vtol_transition_issues.md  vtol_tuning_guide.md
config/: safety_critical_params.json
frontend/src/: App.css  App.jsx  api.js  index.css
frontend/src/components/: AnalysisView.css  AnalysisView.jsx  ChatInterface.css  ChatInterface.jsx  LogPanel.css  LogPanel.jsx  ProgressBar.css  ProgressBar.jsx  Sidebar.css  Stage1.css  Stage2.css  Stage3.css
scripts/: convert_alfa.py  parse_ulog_to_csv.py  run_eval.py
